--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,90 +6,109 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.sylviali.toloveapsycho.GameActivity">
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/description"
-        android:fontFamily="cursive"
-        android:textSize="@dimen/textarea"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="98dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="57dp"
-        android:layout_marginEnd="57dp" />
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:weightSum="1"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.62">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="-40dp">
 
-        <com.example.sylviali.toloveapsycho.ChoicesLayout
-            android:id="@+id/choice1"
+        <com.example.sylviali.toloveapsycho.MaxScrollView
+            android:id="@+id/scroll_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="98dp">
+            <TextView
+                android:layout_width="@dimen/description_x"
+                android:layout_height="wrap_content"
+                android:id="@+id/description"
+                android:fontFamily="cursive"
+                android:textSize="@dimen/textarea"
+                tools:layout_constraintTop_creator="1"
+                tools:layout_constraintRight_creator="1"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:layout_constraintLeft_creator="1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="57dp"
+                android:layout_marginEnd="57dp" />
+        </com.example.sylviali.toloveapsycho.MaxScrollView>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible"></com.example.sylviali.toloveapsycho.ChoicesLayout>
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintTop_creator="1"
+            tools:layout_constraintRight_creator="1"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintVertical_bias="0.62">
 
-        <com.example.sylviali.toloveapsycho.ChoicesLayout
-            android:id="@+id/choice2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"></com.example.sylviali.toloveapsycho.ChoicesLayout>
+            <com.example.sylviali.toloveapsycho.ChoicesLayout
+                android:id="@+id/choice1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"></com.example.sylviali.toloveapsycho.ChoicesLayout>
 
-        <com.example.sylviali.toloveapsycho.ChoicesLayout
-            android:id="@+id/choice3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"></com.example.sylviali.toloveapsycho.ChoicesLayout>
+            <com.example.sylviali.toloveapsycho.ChoicesLayout
+                android:id="@+id/choice2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"></com.example.sylviali.toloveapsycho.ChoicesLayout>
+
+            <com.example.sylviali.toloveapsycho.ChoicesLayout
+                android:id="@+id/choice3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"></com.example.sylviali.toloveapsycho.ChoicesLayout>
+        </LinearLayout>
     </LinearLayout>
 
+
     <ImageView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:id="@+id/survived"
-        android:src="@mipmap/survive"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="67dp"
+        android:layout_width="@dimen/choicex"
+        android:layout_height="@dimen/choicex"
         android:layout_marginEnd="67dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="15dp"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_marginStart="67dp"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/description"
-        android:visibility="invisible"/>
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.858" />
 
     <ImageView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:id="@+id/died"
-        android:src="@mipmap/dead"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="67dp"
+        android:layout_width="@dimen/description_x"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="67dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="89dp"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_marginStart="67dp"
+        android:src="@mipmap/dead"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/description"
-        android:visibility="invisible"/>
-
-
-
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.648"
+        app:layout_constraintVertical_bias="0.767" />
 
 </android.support.constraint.ConstraintLayout>
